fix: align inline overlays and restore host hover behavior

--- a/assets/stylesheets/common/facehash-inline-avatars.scss
+++ b/assets/stylesheets/common/facehash-inline-avatars.scss
@@ -6,8 +6,17 @@
   overflow: hidden;
 }
 
+.facehash-inline-host {
+  position: relative;
+  line-height: 0;
+}
+
 .facehash-inline-overlay {
   pointer-events: none;
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
 }
 
 td.posters .facehash-inline-avatar,
@@ -21,10 +30,6 @@ td.posters .facehash-inline-avatar,
   display: block;
   width: 100%;
   height: 100%;
-}
-
-img.facehash-inline-hidden-safe {
-  opacity: 0 !important;
 }
 
 .facehash-inline-avatar.facehash-inline-hover .facehash-inline-interactive-face {
@@ -45,16 +50,14 @@ img.facehash-inline-hidden-safe {
     translateY(var(--fh-ty, 0px));
 }
 
-img.facehash-inline-hidden-safe:hover + .facehash-inline-avatar.facehash-inline-hover .facehash-inline-interactive-face,
-a:hover > img.facehash-inline-hidden-safe + .facehash-inline-avatar.facehash-inline-hover .facehash-inline-interactive-face {
+.facehash-inline-host:hover > .facehash-inline-avatar.facehash-inline-hover .facehash-inline-interactive-face {
   transform:
     rotateX(0deg)
     rotateY(0deg)
     translateZ(var(--fh-tz, 0px));
 }
 
-img.facehash-inline-hidden-safe:hover + .facehash-inline-avatar.facehash-inline-hover.facehash-inline-small .facehash-inline-interactive-face,
-a:hover > img.facehash-inline-hidden-safe + .facehash-inline-avatar.facehash-inline-hover.facehash-inline-small .facehash-inline-interactive-face {
+.facehash-inline-host:hover > .facehash-inline-avatar.facehash-inline-hover.facehash-inline-small .facehash-inline-interactive-face {
   transform:
     translateX(0px)
     translateY(0px);
